# CRM_Test_Task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  seeder.py
app/: db.py  models.py
app/ai/: agent.py  exceptions.py
app/api/: ai_api.py  attendance_api.py  group_api.py  group_students_api.py  stats_api.py  student_api.py  teacher_api.py
app/core/: config.py
app/repository/: attendanceRepo.py  groupRepo.py  groupStudentRepo.py  statsRepository.py  studentRepo.py  teacherRepo.py
app/schemas/: aiSchema.py  attendanceSchema.py  groupSchema.py  groupStudentSchema.py  statsSchema.py  studentSchema.py  teacherSchema.py
app/services/: attendanceService.py  exceptions.py  groupService.py  groupStudentService.py  statsService.py  studentService.py  teacherService.py
migrations/: env.py
migrations/versions/: e7e81c8b64d7_initial_migration.py
